# cpplog

./: .gitignore  CMakeLists.txt  LICENSE
include/log/: log.h
src/: log.cpp
